# poetry_bug_test

./: flake.nix  pyproject.toml
tests/: test_test_poetry_bug.py
