[tool.poetry]
name = "test_poetry_bug"
version = "0.1.0"
description = ""
authors = ["Bryan Bennett <bbenne10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
trio = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-trio = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
